Fix month picker alignment

--- a/app/styles/components/_month-picker.scss
+++ b/app/styles/components/_month-picker.scss
@@ -1,5 +1,6 @@
 .month-picker {
   display: inline-flex;
+  align-items: center;
 
   button {
     font-size: 220%;
